# nse-market-pulse

./: .gitignore  AGENTS.md  AUDIT.md  AUDIT2.md  CONTEXT.md  README.md  angel_config.example.json  angel_feed.py  app.py  backtest_daily.py  backtest_strategies.py  bhavcopy.py  conviction_calibration.py  db.py  db_inspect.py  deals.py  dhan_config.example.json  dhan_feed.py  docker-compose.otel.yml  eod_conviction.py  eod_options.py  eod_scanner.py  eod_scheduler.py  ideas_journal.py  intrabar.py  notify.py  notify_config.example.json  nse_client.py  nse_demand.py  nse_quote.py  paper.py  portfolio_backtest.py  pyproject.toml  requirements.txt  rollover.py  sector_scan.py  sectors.py  sim.py  snapshot_logger.py  start.py  (+39 more)
.cursor/rules/: 00-testing.mdc  (+4 more)
docs/: AUDIT.md
nse_pulse/: __init__.py
templates/: index.html
tests/: test_app.py  test_app_routes.py  test_backtest.py  test_backtest_daily.py  test_backtest_strategies.py  test_bhavcopy.py  test_book.py  test_client.py  test_client_fetchers.py  test_conviction_calibration.py  test_db.py  test_deals.py  test_eod_conviction.py  test_eod_options.py  test_eod_scanner.py  test_eod_scheduler.py  test_feeds.py  test_fetch_cache.py  test_ideas.py  test_ideas_journal.py  test_intrabar.py  test_logger.py  test_notify.py  test_nse_client.py  test_observability.py  test_paper.py  test_portfolio_backtest.py  test_quote.py  test_quote_more.py  test_rollover.py  test_sector_scan.py  test_sectors.py  test_sim.py  test_sim_views.py  test_start.py  test_strategies.py  test_swr.py  test_take.py  test_walkforward.py
(+37 files in other folders)
